--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.35.0",
     "@google/generative-ai": "^0.24.1",
     "js-sha1": "^0.6.0",
     "jszip": "^3.10.1",
