--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "@google/genai": "^1.35.0",
     "@google/generative-ai": "^0.24.1",
+    "canvas-confetti": "^1.9.4",
     "js-sha1": "^0.6.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-type-animation": "^3.2.0",
     "sha1": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@types/sha1": "^1.1.5",
