--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google/genai": "^1.35.0",
     "@google/generative-ai": "^0.24.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "canvas-confetti": "^1.9.4",
     "js-sha1": "^0.6.0",
     "jszip": "^3.10.1",
@@ -20,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-type-animation": "^3.2.0",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
